Fix the flap animation on Firefox and Safari

--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,8 @@ html, body {
 }
 
 #character #wing {
-  transform-origin: bottom center;
+  transform-origin: center bottom;
+  transform-box: fill-box;
   animation: flap 0.25s linear infinite;
   animation-play-state: running;
 }
